<resources>
    <string name="app_name">Online Shop Satria Adhi Pradana</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="first_name">First name</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="change_photo">Change photo</string>
    <string name="satria_adhi_pradana">Satria Adhi Pradana</string>
    <string name="upload_item">Upload Item</string>
    <string name="trade_store">Trade store</string>
    <string name="payment_method">Payment method</string>
    <string name="balance">Balance</string>
    <string name="_1533">1533$</string>
    <string name="restore_purchase">Restore purchase</string>
    <string name="log_out">Log out</string>
    <string name="trade_history">Trade history</string>
    <string name="help">Help</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="kids">kids</string>
    <string name="fourniture">Fourniture</string>
    <string name="cars">Cars</string>
    <string name="games">Games</string>
    <string name="headphones">Headphones</string>
    <string name="phones">Phones</string>
    <string name="latest">Latest</string>
    <string name="view_all">View all</string>
    <string name="samsung_s10">Samsung S10</string>
    <string name="_18000">18000$</string>
    <string name="add">Add</string>
</resources>