<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        style="@style/RoundedSquare"
        android:layout_width="114dp"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/RoundedSquare" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:fontFamily="@font/poppins"
        android:text="@string/samsung_s10"
        android:textColor="@color/white"
        android:textSize="9sp"
        app:layout_constraintStart_toStartOf="@+id/shapeableImageView"
        tools:layout_editor_absoluteY="94dp" />

    <TextView
        android:layout_width="35dp"
        android:layout_height="12dp"
        android:layout_marginStart="7dp"
        android:background="@drawable/edit_text_with_round_corners"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:text="Phones"
        android:textColor="@color/black_1"
        android:textSize="6dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="69dp" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:fontFamily="@font/poppins"
        android:text="@string/_18000"
        android:textColor="@color/white"
        android:textSize="7sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="122dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:backgroundTint="@color/white_1"
        android:scaleType="center"
        app:maxImageSize="12dp"
        android:contentDescription="@string/add"
        app:srcCompat="@drawable/ic_baseline_add_24"
        app:tint="@color/purple"
        app:fabCustomSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>