<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SigninFragment">

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="160dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center_horizontal|top"
        android:text="@string/sign_in"
        android:textColor="@color/dark_blue"
        android:textFontWeight="600"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="32dp"
        android:width="300dp"
        android:background="@drawable/edit_text_with_round_corners"
        android:gravity="center"
        android:hint="@string/first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:layout_marginTop="28dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:width="300dp"
        android:background="@drawable/edit_text_with_round_corners"
        android:gravity="center"
        android:hint="Last name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:width="300dp"
        android:background="@drawable/edit_text_with_round_corners"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_rounded_corners"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/already_have_an_account"
        android:textFontWeight="500"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/log_in"
        android:textColor="@color/log_in_color"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_vertical"
        android:layout_marginTop="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/google_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:layout_marginStart="8sp"
            android:text="Sign in with Google"
            android:textColor="@color/black"
            android:textFontWeight="500"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_vertical"
        android:layout_marginTop="25sp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/apple_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:layout_marginStart="8sp"
            android:text="Sign in with Apple"
            android:textColor="@color/black"
            android:textFontWeight="500"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>